# sparktest

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/sparktest/: __init__.py  cli.py  divergence.py  models.py  report.py
src/sparktest/scorer/: elaboration.py  flexibility.py  fluency.py  originality.py
src/sparktest/tests/: convergent.py  divergent.py  narrative.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_sparktest.py
